@@ -1,5 +1,6 @@
 2.0.20
 Add support for using Docker Volumes for HostHelperFolder, BcArtifacts Cache folder and my folder
+Fix to Create-AadAppsForBC for this breaking change in AzureAD https://docs.microsoft.com/en-us/azure/active-directory/develop/reference-breaking-changes#appid-uri-in-single-tenant-applications-will-require-use-of-default-scheme-or-verified-domains
 
 2.0.19
 New-BcAuthContext displays wrongly decoded names as accessToken is UTF8 encoded
